--- a/templates/chat.html
+++ b/templates/chat.html
@@ -122,13 +122,12 @@
 
 
 
-                                
                                 <ul class="inner-links-list" id="innerLink">
                                     <li class="active"><a href="#!" data-title="Ask anything">Ask anything</a></li>
                                     <li><a href="#!" data-title="Image generator">Image generator</a></li>
                                     <li><a href="#!" data-title="Essay writer">Essay writer</a></li>
                                 </ul>
-                                 
+                        
 
 
 
@@ -163,10 +162,6 @@
                                 <h3>Ask anything to chatbot</h3>
                             </div>
                         </div>
-
-
-
-
                         <div class="msger-chat" id="chatlog">
                         </div>
                         <form class="msger-inputarea" method="post" action="{% url 'chat' %}" id="speechForm">
@@ -183,13 +178,6 @@
                             <button type="submit" value="Send" class="msger-send-btn" id="send-btn">
                                 <i class="iconsax" data-icon="send-1"></i></button>
                         </form>
-
-
-
-
-
-
-
                     </div>
                 </div>
             </div>
@@ -875,16 +863,15 @@
         
     </script>
 
-<script>
-        // Function to handle speech recognition
+    <script>
         function startSpeechRecognition() {
             const recognition = new webkitSpeechRecognition();
-            recognition.lang = 'en-IN'; // Set the language
+            recognition.lang = 'en-IN';
             recognition.interimResults = true;
 
             recognition.onresult = function(event) {
                 const transcript = event.results[0][0].transcript;
-                $('#userInput').val(transcript); // Set the recognized text to the input field
+                $('#userInput').val(transcript); 
             }
 
             recognition.onerror = function(event) {
@@ -892,7 +879,6 @@
             }
 
             recognition.onend = function() {
-                // You can perform any actions after the speech recognition ends
             }
 
             recognition.start();
@@ -906,13 +892,11 @@
 
             $('#speechForm').submit(function(e) {
                 e.preventDefault();
-                // Submit the form using AJAX or perform any other action
                 $.ajax({
                     type: 'POST',
                     url: '{% url "speech_to_text" %}',
                     data: $(this).serialize(),
                     success: function(response) {
-                        // Handle the response from the server
                     },
                     error: function(xhr, status, error) {
                         console.error('Error:', error);
