--- a/templates/Thanks.html
+++ b/templates/Thanks.html
@@ -14,9 +14,7 @@
                 </a>
                 <img src="https://cdn.templates.unlayer.com/assets/1597218650916-xxxxc.png" alt="Message Image" style="max-width: 260px; margin-top: 10px; height: 70px; display: block; margin: 0 auto;">
                 <h1 style="font-size: 16px; font-weight: bold; letter-spacing: 2px; text-transform: uppercase; margin-bottom: 20px; color:#3cedb2;">THANKS FOR SIGNING UP!</h1>
-                {% if email_context %}
-                <p style="font-size: 20px; margin-bottom: 20px; color: #fff;">Dear {{email_context.name}},</p>
-                {% endif %}
+                <p style="font-size: 20px; margin-bottom: 20px; color: #fff;">Dear {{ name }},</p>
                 <p style="font-size: 14px; margin-bottom: 20px; color: #fff;">We're thrilled to have you join our community. Thank you for signing up with us. Your support means the world to us! If you have any questions or need assistance, feel free to reach out to us anytime.</p>
                 <p style="font-size: 14px; margin-bottom: 20px; color: #fff;">Once again, thank you for choosing us. We're excited to embark on this journey together!</p>
                 <p style="font-style: italic; margin-top: 20px; color: #fff;">Best regards,<br>A2B MegaBot</p>
