--- a/templates/Thanks.html
+++ b/templates/Thanks.html
@@ -9,9 +9,11 @@
     <table style="width: 100%; max-width: 600px; margin: 0 auto; background-color: #252525; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
         <tr>
             <td style="padding: 35px; text-align: center;">
-                <a href="https://themes.pixelstrap.net/mega_bot/">
-                    <img src="https://themes.pixelstrap.net/mega_bot/assets/images/logo.svg" alt="Chatbot Logo" style="max-width: 161px; height: auto; display: block; margin: 0 auto 20px;">
-                </a>
+<a href="https://ibb.co/FVwY0z9">
+    <img src="https://i.ibb.co/rs6pcHg/logo.png" alt="Logo" style="max-width: 161px; height: auto; display: block; margin: 0 auto 20px;" border="0">
+</a>
+
+               
                 <img src="https://cdn.templates.unlayer.com/assets/1597218650916-xxxxc.png" alt="Message Image" style="max-width: 260px; margin-top: 10px; height: 70px; display: block; margin: 0 auto;">
                 <h1 style="font-size: 16px; font-weight: bold; letter-spacing: 2px; text-transform: uppercase; margin-bottom: 20px; color:#3cedb2;">THANKS FOR SIGNING UP!</h1>
                 <p style="font-size: 20px; margin-bottom: 20px; color: #fff;">Dear {{ name }},</p>
