--- a/templates/Thanks.html
+++ b/templates/Thanks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email Message</title>
+    <title>Signup MegaBot</title>
 </head>
 <body style="font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #fff;">
     <table style="width: 100%; max-width: 600px; margin: 0 auto; background-color: #252525; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
