--- a/templates/otp_mail.html
+++ b/templates/otp_mail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Password Reset OTP</title>
+    <title>Password Reset</title>
 </head>
 <body style="font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #fff;">
     <table style="width: 100%; max-width: 600px; margin: 0 auto; background-color: #252525; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
@@ -13,9 +13,18 @@
                     <img src="https://i.ibb.co/rs6pcHg/logo.png" alt="Logo" style="max-width: 161px; height: auto; display: block; margin: 0 auto 20px;" border="0">
                 </a>          
                 <img src="https://cdn.templates.unlayer.com/assets/1597218650916-xxxxc.png" alt="Message Image" style="max-width: 260px; margin-top: 10px; height: 70px; display: block; margin: 0 auto;">
-                <h1 style="font-size: 16px; font-weight: bold; letter-spacing: 2px; text-transform: uppercase; margin-bottom: 20px; color:#3cedb2;">Password Reset OTP</h1>
+                <h1 style="font-size: 16px; font-weight: bold; letter-spacing: 2px; text-transform: uppercase; margin-bottom: 20px; color:#3cedb2;">Password Reset</h1>
                 <p style="font-size: 20px; margin-bottom: 20px; color: #fff;">Dear {{ name }},</p>
-                <p style="font-size: 14px; margin-bottom: 20px; color: #fff;">Your OTP for password reset is: <strong>{{ otp }}</strong>. Please use this OTP to reset your password. This OTP is valid for a limited time.</p>
+                <p style="font-size: 14px; margin-bottom: 20px; color: #fff;">Your OTP for password reset is:</p>
+                
+                <div style="background-color: #3cedb2; color: #fff; font-size: 24px; padding: 10px 20px; border-radius: 5px; display: inline-block; margin-bottom: 20px; text-decoration: underline;">
+                    {% for char in otp %}
+                        {{ char }}{% if not forloop.last %}&nbsp;{% endif %}
+                    {% endfor %}
+                </div>
+
+
+                <p style="font-size: 14px; margin-bottom: 20px; color: #fff;">Please use this OTP to reset your password. This OTP is valid for a limited time.</p>
                 <p style="font-size: 14px; margin-bottom: 20px; color: #fff;">If you did not request a password reset, please ignore this email.</p>
                 <p style="font-style: italic; margin-top: 20px; color: #fff;">Best regards,<br>A2B MegaBot</p>
                 <div style="margin-top: 20px;">
