--- a/templates/login.html
+++ b/templates/login.html
@@ -89,16 +89,14 @@
                                     <br>
 
 
-
                                     <div class="mb-3 form-group">
                                         <button class="butn" type="button"><a href="{% url 'face_id' %}"><span style="color: #252525;">Face ID Log in</span></a></button>
                                     </div>  
 
 
-
                                     <br>
                                     <div class="text-end">
-                                        <a data-cursor="pointer" href="reset-password.html">Forget Password?</a>
+                                        <a data-cursor="pointer" href="{% url 'forgot1' %}">Forget Password?</a>
                                     </div>
                                     <button type="submit" class="btn-solid w-100 text-center mt-3">Log me in</button>
                                 </form>
