--- a/templates/reset-password.html
+++ b/templates/reset-password.html
@@ -62,17 +62,16 @@
                         <h2><span>Reset password</span></h2>
 <p>Once you provide your email address, we'll send you a one-time password (OTP) along with instructions on how to reset your password.</p>
 
-                        <form class="auth-form" method="post">
-                            {% csrf_token %}
-                            <div class="mb-3 form-group">
-                                <i class="iconsax" data-icon="mail"></i>
-                                <label for="emailid" class="form-label">Email ID</label>
-                                <input type="email" name="email" placeholder="Enter your mail id" class="form-control" id="emailid">
-                            </div>
-                            <a href="otp.html" data-cursor="pointer"
-                                class="btn-solid btn-absolute text-center mt-3">Reset
-                                Password</a>
-                        </form>
+<form class="auth-form" method="post">
+    {% csrf_token %}
+    <div class="mb-3 form-group">
+        <i class="iconsax" data-icon="mail"></i>
+        <label for="emailid" class="form-label">Email ID</label>
+        <input type="email" name="email" placeholder="Enter your mail id" class="form-control">
+    </div>
+    <button type="submit" class="btn-solid btn-absolute text-center mt-3">Reset Password</button>
+</form>
+
                     </div>
                 </div>
             </div>
