--- a/templates/reset-password.html
+++ b/templates/reset-password.html
@@ -44,7 +44,7 @@
 
     <!-- section start -->
     <section class="login-section section-b-space">
-        <a href="index.html"><img src="https://themes.pixelstrap.net/mega_bot/assets/images/logo.svg" class="img-fluid logo-auth"></a>
+        <a href="{% url 'index' %}"><img src="https://themes.pixelstrap.net/mega_bot/assets/images/logo.svg" class="img-fluid logo-auth"></a>
         <div class="row m-0">
             <div class="col-lg-7 d-sm-block d-none p-0">
                 <div class="login-animation">
