--- a/templates/otp_mail.html
+++ b/templates/otp_mail.html
@@ -17,11 +17,11 @@
                 <p style="font-size: 20px; margin-bottom: 20px; color: #fff;">Dear {{ name }},</p>
                 <p style="font-size: 14px; margin-bottom: 20px; color: #fff;">Your OTP for password reset is:</p>
                 
-                <div style="background-color: #3cedb2; color: #fff; font-size: 24px; padding: 10px 20px; border-radius: 5px; display: inline-block; margin-bottom: 20px; text-decoration: underline;">
-                    {% for char in otp %}
-                        {{ char }}{% if not forloop.last %}&nbsp;{% endif %}
-                    {% endfor %}
-                </div>
+<div style="background-color: #3cedb2; color: #fff; font-size: 24px; padding: 10px 20px; border-radius: 5px; display: inline-block; margin-bottom: 20px;">
+    {% for char in otp %}
+        <span style="text-decoration: underline;">{{ char }}</span>{% if not forloop.last %}&nbsp;{% endif %}
+    {% endfor %}
+</div>
 
 
                 <p style="font-size: 14px; margin-bottom: 20px; color: #fff;">Please use this OTP to reset your password. This OTP is valid for a limited time.</p>
