--- a/templates/new_password.html
+++ b/templates/new_password.html
@@ -63,11 +63,11 @@
                             {% csrf_token %}
                             <div class="mb-3">
                                 <label for="password" class="form-label">New Password</label>
-                                <input type="password" name="password" id="password" placeholder="Enter your new password" class="form-control" required>
+                                <input type="password" name="password" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" placeholder="Enter your new password" class="form-control" required>
                             </div>
                             <div class="mb-3">
                                 <label for="confirm_password" class="form-label">Confirm Password</label>
-                                <input type="password" name="confirm_password" id="confirm_password" placeholder="Re-enter your new password" class="form-control" required>
+                                <input type="password" name="confirm_password" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" placeholder="Re-enter your new password" class="form-control" required>
                             </div>
                             <button type="submit" class="btn-solid btn-absolute text-center mt-3">Submit</button>
                         </form>
