--- a/templates/service.html
+++ b/templates/service.html
@@ -1,8 +1,7 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!-- Mirrored from themes.pixelstrap.net/mega_bot/html/service.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Mar 2024 20:04:39 GMT -->
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +9,8 @@
     <meta name="description" content="megabot">
     <meta name="keywords" content="megabot">
     <meta name="author" content="megabot">
-    <link rel="icon" href="../assets/images/favicon.png" type="image/x-icon" />
-    <link rel="shortcut icon" href="../assets/images/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="{% static 'assets/images/favicon.png'%}" type="image/x-icon" />
+    <link rel="shortcut icon" href="{% static 'assets/images/favicon.png'%}" type="image/x-icon" />
     <title>Megabot</title>
 
     <!--Google font-->
@@ -20,24 +19,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;900&amp;display=swap" rel="stylesheet">
 
     <!-- bootstrap css -->
-    <link id="rtl-link" rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
+    <link id="rtl-link" rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/bootstrap.css'%}">
 
     <!-- remixicon css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/remixicon.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/remixicon.css'%}">
 
     <!-- iconsax css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/iconsax.css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/iconsax.css'%}" />
 
     <!-- animation css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/aos.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/aos.css'%}">
 
     <!-- swiper slider css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/swiper-bundle.min.css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/swiper-bundle.min.css'%}" />
 
     <!-- style css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-
-
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css'%}">
 
 </head>
 
@@ -51,7 +48,7 @@
                 <i class="iconsax" data-icon="text-align-justify"></i>
             </span>
         </button>
-        <a href="index.html">
+        <a href="{% url 'index' %}">
             <img src="https://themes.pixelstrap.net/mega_bot/assets/images/logo.svg" class="img-fluid" alt="logo">
         </a>
         <nav class="header-nav-middle">
@@ -63,16 +60,16 @@
                             aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
-                        <ul class="navbar-nav">
+                                                <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
+                                <a class="nav-link" href="{% url 'index' %}">Home</a>
                             </li>
 
-                            <li class="nav-item">
+                            <!--<li class="nav-item">
                                 <a class="nav-link" href="chat.html">Chat</a>
-                            </li>
+                            </li> -->
 
-                            <li class="nav-item dropdown">
+<!--                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="javascript:void(0)"
                                     data-bs-toggle="dropdown">Pages</a>
 
@@ -102,14 +99,14 @@
                                         <a class="dropdown-item" href="terms.html">Terms & Conditon</a>
                                     </li>
                                 </ul>
+                            </li> -->
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://portfolio0.pythonanywhere.com/">Developer</a>
                             </li>
 
                             <li class="nav-item active">
-                                <a class="nav-link" href="service.html">service</a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link" href="pricing.html">pricing</a>
+                                <a class="nav-link" href="{% url 'about' %}">About</a>
                             </li>
 
                             <li class="nav-item">
@@ -133,12 +130,10 @@
                 <div class="col-lg-6">
                     <div class="breadcrumb-content">
                         <div>
-                            <h2><img src="../assets/images/breadcrumb-title.png" class="img-fluid"
-                                    alt="title-effect">Services
+                            <h2><img src="{% static 'assets/images/breadcrumb-title.png'%}" class="img-fluid"
+                                    alt="title-effect">About
                             </h2>
-                            <p><i class="ri-subtract-line"></i>We offer AI consulting services and solutions that will
-                                help you achieve your business objectives faster, while setting you up for sustainable
-                                growth.</p>
+                            <p><i class="ri-subtract-line"></i>My website showcases an AI chatbot project emphasizing knowledge representation and reasoning. It highlights the AI's ability to understand information, engage in conversations, and make informed decisions.</p>
                         </div>
                     </div>
                 </div>
@@ -426,31 +421,28 @@
 
 
     <!-- Bootstrap js-->
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'assets/js/bootstrap.bundle.min.js'%}"></script>
 
     <!-- slider js-->
-    <script src="../assets/js/swiper-bundle.min.js"></script>
-    <script src="../assets/js/custom-slider.js"></script>
+    <script src="{% static 'assets/js/swiper-bundle.min.js'%}"></script>
+    <script src="{% static 'assets/js/custom-slider.js'%}"></script>
 
     <!-- custom cursor -->
-    <script src="../assets/js/custom-cursor.js"></script>
+    <script src="{% static 'assets/js/custom-cursor.js'%}"></script>
 
     <!-- aos animation -->
-    <script src="../assets/js/aos.js"></script>
-    <script src="../assets/js/custom-aos.js"></script>
+    <script src="{% static 'assets/js/aos.js'%}"></script>
+    <script src="{% static 'assets/js/custom-aos.js'%}"></script>
 
     <!-- iconsax js -->
-    <script src="../assets/js/iconsax.js"></script>
+    <script src="{% static 'assets/js/iconsax.js'%}"></script>
 
     <!-- header sticky js -->
-    <script src="../assets/js/header_sticky.js"></script>
+    <script src="{% static 'assets/js/header_sticky.js'%}"></script>
 
     <!-- Theme js-->
-    <script src="../assets/js/script.js"></script>
+    <script src="{% static 'assets/js/script.js'%}"></script>
 
 
 </body>
-
-
-<!-- Mirrored from themes.pixelstrap.net/mega_bot/html/service.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Mar 2024 20:04:39 GMT -->
 </html>
