--- a/templates/index.html
+++ b/templates/index.html
@@ -1286,22 +1286,22 @@
                     </div>
                     <div class="footer-content">
                         <ul>
-                            <li><a data-cursor="pointer" href="index.html">Home</a></li>
+                            <li><a data-cursor="pointer" href="{% url 'index' %}">Home</a></li>
 <!--                             <li><a data-cursor="pointer" href="service.html">Service</a></li>
                             <li><a data-cursor="pointer" href="pricing.html">Pricing</a></li> -->
-                            <li><a data-cursor="pointer" href="contact-us.html">Contact us</a></li>
+                            <li><a data-cursor="pointer" href="{% url 'forgot1' %}">Contact us</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="link-section">
                     <div class="footer-title">
                         <img src="https://themes.pixelstrap.net/mega_bot/assets/svg/star.svg" class="img-fluid" alt="star">
-                        Our service
+                        Explore
                     </div>
                     <div class="footer-content">
                         <ul>
-                            <li><a data-cursor="pointer" href="chat.html">Generate</a></li>
-                            <li><a data-cursor="pointer" href="chat.html">Find Image</a></li>
+                            <li><a data-cursor="pointer" href="{% url 'forgot1' %}">chat</a></li>
+                            <li><a data-cursor="pointer" href="https://portfolio0.pythonanywhere.com/">Developer</a></li>
 <!--                             <li><a data-cursor="pointer" href="chat.html">Email writer</a></li>
                             <li><a data-cursor="pointer" href="chat.html">Social media</a></li> -->
                         </ul>
@@ -1310,12 +1310,12 @@
                 <div class="link-section">
                     <div class="footer-title">
                         <img src="https://themes.pixelstrap.net/mega_bot/assets/svg/star.svg" class="img-fluid" alt="star">
-                        Our company
+                        Access
                     </div>
                     <div class="footer-content">
                         <ul>
-                            <li><a data-cursor="pointer" href="login.html">Login</a></li>
-                            <li><a data-cursor="pointer" href="blog-listing.html">Blog listing</a></li>
+                            <li><a data-cursor="pointer" href="{% url 'login' %}">Login</a></li>
+                            <li><a data-cursor="pointer" href="{% url 'forgot1' %}">Reset Password</a></li>
 <!--                             <li><a data-cursor="pointer" href="blog-grid.html">Blog Grid</a></li>
                             <li><a data-cursor="pointer" href="blog-details.html">Blog Details</a></li> -->
                         </ul>
@@ -1323,7 +1323,7 @@
                 </div>
             </div>
             <div class="footer-copyright">
-                <h4>@2023 All the Copyright Reserved.</h4>
+                <h4>Made with <span style="color: red;">❤️</span> by <a href="https://portfolio0.pythonanywhere.com/">Ahmed Bilal Bhatti</a></h4>
                 <ul class="footer-links">
                     <li><a href="terms.html">Privacy Policy </a></li>
                     <li><a href="terms.html">Terms & Condition </a></li>
